# Mini_memoire

./: README.md  rand  rand.cc  rand.d
Code/: Untitled.ipynb
Code_jupyter/: Untitled1.ipynb  second.ipynb  transducer.ipynb
Code_jupyter/.ipynb_checkpoints/: second-checkpoint.ipynb
Dotty_res/: 1.txt
FunctionalExamples/: 100_12_10.dot  150_14_12.dot  200_16_14.dot  250_18_16.dot  300_20_18.dot  50_10_8.dot
FunctionalHasTwinning/: pruningStop_100.dot  pruningStop_1000.dot  pruningStop_1000_1.dot  pruningStop_1000_2.dot  pruningStop_1000_3.dot  pruningStop_100_1.dot  pruningStop_100_2.dot  pruningStop_200.dot  pruningStop_200_1.dot  pruningStop_200_2.dot  pruningStop_30.dot  pruningStop_300.dot  pruningStop_300_1.dot  pruningStop_300_2.dot  pruningStop_300_3.dot  pruningStop_40.dot  pruningStop_50.dot  pruningStop_500.dot  pruningStop_5000.dot  pruningStop_500_1.dot  pruningStop_500_2.dot  pruningStop_60.dot  pruningStop_70.dot  pruningStop_80.dot
NotDeterministicAndFonctional/: 100_13_11.dot  50_10_8.dot
NotDeterministicExamples/: 100_12_10.dot  150_12_14.dot  200_14_12.dot  250_13_14.dot  300_16_14.dot  50_12_10.dot
Template Mini mémoire/: article.tex
Theory/: GOALS  Notes.odt  mini_mémoire.ctb  test
__MACOSX/Template Mini mémoire/: ._article.tex  ._article.toc
prolog/: test.pl
vcsn-2.6/: CMakeLists.txt  Makefile  aclocal.m4  configure
vcsn-2.6/Generateur/: README.md
vcsn-2.6/Generateur/generateurNotStop/: branchingGenerator.cpp  branchingGenerator2.cpp  pruningGenerator.cpp
vcsn-2.6/Generateur/generateurStop/: pruningStop.cpp
vcsn-2.6/debian/: changelog
vcsn-2.6/doc/notebooks/: automaton.context.ipynb
vcsn-2.6/lib/vcsn/dot/: parse.cc  parse.hh  parse.stamp  scan-version.hh  scan.cc  scan.stamp  stack.hh
vcsn-2.6/lib/vcsn/rat/: parse.cc  parse.hh  parse.stamp  scan.cc  scan.stamp  stack.hh
vcsn-2.6/libexec/: vcsn-tools-algos.cc
vcsn-2.6/share/vcsn/: version.yaml
vcsn-2.6/tests/Results2random/: 20_1_1.dot  all_after.dot  all_before.dot  all_step1.dot  all_step2.dot  transducer_after.dot  transducer_before.dot  transducer_test.dot
vcsn-2.6/tests/demo/: Generator_random  Generator_random.cpp  Generator_random.d  Generator_random2  Generator_random2.cpp  Generator_random2.d  Generator_random3  Generator_random4  char  char.cpp  char.d  compose  compose.d  file.txt  g  g.d  generator  generator.d  generator1.1  generator1.1.cpp  generator1.1.d  generator1.2  generator1.2.cmd  generator1.2.cpp  generator1.2.d  generator_rec_stop  generator_rec_stop.cpp  generator_rec_stop.d  ratio  ratio.d  sms2fr-dyn.d  test  test.cpp  test2  test2.d  try  try.cpp  try.d  word.cpp  word.d
vcsn-2.6/tests/generateurNotStop/: 15Useful.dot  2randomStateGenerator1  2randomStateGenerator1.cpp  2randomStateGenerator1.d  combinedGenerator1.cpp  pruningGenerator1  pruningGenerator1.cpp  pruningGenerator1.d
vcsn-2.6/tests/generateurStop/: Generator_random5  Generator_random5.cpp  Generator_random5.d  Untitled.ipynb
vcsn-2.6/tests/generateurStop/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
vcsn-2.6/tests/generator/: AlgorithmsDescription:  Generator_random  Generator_random.cpp  Generator_random2.cpp  Generator_random3  Generator_random3.cpp  Generator_random3.d  Generator_random3_bis  Generator_random3_bis.cpp  Generator_random3_bis.d  Generator_random4  Generator_random4.cmd  Generator_random4.cpp  Generator_random4.d  Generator_random5  Generator_random5.cpp  all  all.cpp  all.d  char.cpp  generator.cpp  generator1.0.cpp  generator_rec_stop.cpp  incrementalGenerator2.cpp  rand.cpp  ratio.cpp  res  res.dot  res5states.dot  test2.cpp  whole.dot
vcsn-2.6/tests/newGenerotor/: 10_2_2_trim.dot  200_50_30_13.dot  2randomStatesGenerator  2randomStatesGenerator.cpp  2randomStatesGenerator.d  500_210_188_104.dot  combinedGenerator  combinedGenerator.cpp  combinedGenerator.d  incrementalGenerator.cpp  newmémoire   pruningGenerator  pruningGenerator.cpp  pruningGenerator.d  secondIncremental.cpp  transducer_apres.dot  transducer_apres_bis.dot  transducer_avant.dot  transducer_avant_bis.dot
vcsn-2.6/vcsn/: config.in.h
vcsn-2.6/vcsn/algos/: has-twins-property.hh  is-complete.hh  random-automaton-ORIGINAL.hh  random-automaton.hh
vcsn-2.6/vcsn/dyn/: automaton.hh
vcsn-2.6/vcsn/misc/: location.hh  position.hh
