cmake_minimum_required(VERSION 3.9)
project(vcsn_2_6)

set(CMAKE_CXX_STANDARD 11)

add_executable(vcsn_2_6
        bin/efstcompile
        bin/efstdecompile
        bin/local.mk
        bin/vcsn.in
        build-aux/bin/bison++.in
        build-aux/bin/compile
        build-aux/bin/config.guess
        build-aux/bin/config.sub
        build-aux/bin/coverage
        build-aux/bin/depcomp
        build-aux/bin/dyn-json
        build-aux/bin/flex++.in
        build-aux/bin/fuse-switch
        build-aux/bin/install-sh
        build-aux/bin/ltmain.sh
        build-aux/bin/md-2-mw
        build-aux/bin/missing
        build-aux/bin/move-if-change
        build-aux/bin/odyn-gen
        build-aux/bin/py-compile
        build-aux/bin/registries-gen
        build-aux/bin/tap-driver.sh
        build-aux/bin/tools-gen
        build-aux/bin/ylwrap
        build-aux/m4/arg-progs.m4
        build-aux/m4/ax_check_compile_flag.m4
        build-aux/m4/ax_prefix_config_h.m4
        build-aux/m4/boost.m4
        build-aux/m4/ccache.m4
        build-aux/m4/doxygen.m4
        build-aux/m4/glibcxx-debug.m4
        build-aux/m4/ipython.m4
        build-aux/m4/libtool.m4
        build-aux/m4/ltoptions.m4
        build-aux/m4/ltsugar.m4
        build-aux/m4/ltversion.m4
        build-aux/m4/lt~obsolete.m4
        build-aux/m4/urbi-append-flags.m4
        build-aux/m4/urbi-resolve-dir.m4
        build-aux/m4/vcsn-arg.m4
        build-aux/m4/vcsn-as-needed.m4
        build-aux/m4/vcsn-regex.m4
        build-aux/m4/warning.m4
        build-aux/make/buildfarm.mk
        build-aux/make/doxygen.mk
        build-aux/make/html-dir.mk
        build-aux/make/init.mk
        debian/changelog
        debian/compat
        debian/control
        debian/copyright
        debian/rules
        doc/NEWS.mw.patches/01-2.2.patch
        doc/NEWS.mw.patches/02-2.3.patch
        doc/NEWS.mw.patches/03-2.4.patch
        doc/NEWS.mw.patches/04-2.4.patch
        doc/notebooks/!Read-me-first.ipynb
        doc/notebooks/Algorithms.ipynb
        doc/notebooks/Automata.ipynb
        doc/notebooks/automaton.accessible.ipynb
        doc/notebooks/automaton.add.ipynb
        doc/notebooks/automaton.ambiguous_word.ipynb
        doc/notebooks/automaton.coaccessible.ipynb
        doc/notebooks/automaton.codeterminize.ipynb
        doc/notebooks/automaton.cominimize.ipynb
        doc/notebooks/automaton.complement.ipynb
        doc/notebooks/automaton.complete.ipynb
        doc/notebooks/automaton.compose.ipynb
        doc/notebooks/automaton.conjugate.ipynb
        doc/notebooks/automaton.conjunction.ipynb
        doc/notebooks/automaton.context.ipynb
        doc/notebooks/automaton.costandard.ipynb
        doc/notebooks/automaton.delay_automaton.ipynb
        doc/notebooks/automaton.determinize.ipynb
        doc/notebooks/automaton.difference.ipynb
        doc/notebooks/automaton.eliminate_state.ipynb
        doc/notebooks/automaton.evaluate.ipynb
        doc/notebooks/automaton.expression.ipynb
        doc/notebooks/automaton.factor.ipynb
        doc/notebooks/automaton.filter.ipynb
        doc/notebooks/automaton.has_bounded_lag.ipynb
        doc/notebooks/automaton.has_lightening_cycle.ipynb
        doc/notebooks/automaton.has_twins_property.ipynb
        doc/notebooks/automaton.infiltrate.ipynb
        doc/notebooks/automaton.info.ipynb
        doc/notebooks/automaton.insplit.ipynb
        doc/notebooks/automaton.is_accessible.ipynb
        doc/notebooks/automaton.is_ambiguous.ipynb
        doc/notebooks/automaton.is_coaccessible.ipynb
        doc/notebooks/automaton.is_codeterministic.ipynb
        doc/notebooks/automaton.is_complete.ipynb
        doc/notebooks/automaton.is_costandard.ipynb
        doc/notebooks/automaton.is_cycle_ambiguous.ipynb
        doc/notebooks/automaton.is_deterministic.ipynb
        doc/notebooks/automaton.is_empty.ipynb
        doc/notebooks/automaton.is_equivalent.ipynb
        doc/notebooks/automaton.is_functional.ipynb
        doc/notebooks/automaton.is_isomorphic.ipynb
        doc/notebooks/automaton.is_letterized.ipynb
        doc/notebooks/automaton.is_partial_identity.ipynb
        doc/notebooks/automaton.is_proper.ipynb
        doc/notebooks/automaton.is_realtime.ipynb
        doc/notebooks/automaton.is_standard.ipynb
        doc/notebooks/automaton.is_synchronized.ipynb
        doc/notebooks/automaton.is_trim.ipynb
        doc/notebooks/automaton.is_useless.ipynb
        doc/notebooks/automaton.is_valid.ipynb
        doc/notebooks/automaton.ldivide.ipynb
        doc/notebooks/automaton.letterize.ipynb
        doc/notebooks/automaton.lift.ipynb
        doc/notebooks/automaton.lightest.ipynb
        doc/notebooks/automaton.lightest_automaton.ipynb
        doc/notebooks/automaton.lweight.ipynb
        doc/notebooks/automaton.minimize.ipynb
        doc/notebooks/automaton.multiply.ipynb
        doc/notebooks/automaton.Operators.ipynb
        doc/notebooks/automaton.pair.ipynb
        doc/notebooks/automaton.partial_identity.ipynb
        doc/notebooks/automaton.prefix.ipynb
        doc/notebooks/automaton.project.ipynb
        doc/notebooks/automaton.proper.ipynb
        doc/notebooks/automaton.push_weights.ipynb
        doc/notebooks/automaton.rdivide.ipynb
        doc/notebooks/automaton.realtime.ipynb
        doc/notebooks/automaton.reduce.ipynb
        doc/notebooks/automaton.rweight.ipynb
        doc/notebooks/automaton.scc.ipynb
        doc/notebooks/automaton.shortest.ipynb
        doc/notebooks/automaton.shuffle.ipynb
        doc/notebooks/automaton.standard.ipynb
        doc/notebooks/automaton.star.ipynb
        doc/notebooks/automaton.strip.ipynb
        doc/notebooks/automaton.subword.ipynb
        doc/notebooks/automaton.suffix.ipynb
        doc/notebooks/automaton.synchronize.ipynb
        doc/notebooks/automaton.synchronizing_word.ipynb
        doc/notebooks/automaton.transpose.ipynb
        doc/notebooks/automaton.trim.ipynb
        doc/notebooks/automaton.tuple.ipynb
        doc/notebooks/automaton.type.ipynb
        doc/notebooks/automaton.weight_series.ipynb
        doc/notebooks/C++-Library.ipynb
        doc/notebooks/check-notebooks
        doc/notebooks/CIAA-2016.ipynb
        doc/notebooks/context.cerny.ipynb
        doc/notebooks/context.cotrie.ipynb
        doc/notebooks/context.de_bruijn.ipynb
        doc/notebooks/context.divkbaseb.ipynb
        doc/notebooks/context.ladybird.ipynb
        doc/notebooks/context.levenshtein.ipynb
        doc/notebooks/context.Operators.ipynb
        doc/notebooks/context.quotkbaseb.ipynb
        doc/notebooks/context.random_automaton.ipynb
        doc/notebooks/context.random_expression.ipynb
        doc/notebooks/context.random_weight.ipynb
        doc/notebooks/context.trie.ipynb
        doc/notebooks/context.tuple.ipynb
        doc/notebooks/context.weight_one.ipynb
        doc/notebooks/context.weight_zero.ipynb
        doc/notebooks/context.word_context.ipynb
        doc/notebooks/Contexts.ipynb
        doc/notebooks/expansion.add.ipynb
        doc/notebooks/expansion.complement.ipynb
        doc/notebooks/expansion.conjunction.ipynb
        doc/notebooks/expansion.ldivide.ipynb
        doc/notebooks/expansion.lweight.ipynb
        doc/notebooks/expansion.Operators.ipynb
        doc/notebooks/expansion.project.ipynb
        doc/notebooks/expansion.rweight.ipynb
        doc/notebooks/expansion.tuple.ipynb
        doc/notebooks/expression.add.ipynb
        doc/notebooks/expression.automaton.ipynb
        doc/notebooks/expression.complement.ipynb
        doc/notebooks/expression.conjunction.ipynb
        doc/notebooks/expression.constant_term.ipynb
        doc/notebooks/expression.context.ipynb
        doc/notebooks/expression.derivation.ipynb
        doc/notebooks/expression.derived_term.ipynb
        doc/notebooks/expression.difference.ipynb
        doc/notebooks/expression.expansion.ipynb
        doc/notebooks/expression.inductive.ipynb
        doc/notebooks/expression.infiltrate.ipynb
        doc/notebooks/expression.info.ipynb
        doc/notebooks/expression.is_equivalent.ipynb
        doc/notebooks/expression.is_valid.ipynb
        doc/notebooks/expression.ldivide.ipynb
        doc/notebooks/expression.lift.ipynb
        doc/notebooks/expression.lweight.ipynb
        doc/notebooks/expression.multiply.ipynb
        doc/notebooks/expression.Operators.ipynb
        doc/notebooks/expression.partial_identity.ipynb
        doc/notebooks/expression.project.ipynb
        doc/notebooks/expression.rdivide.ipynb
        doc/notebooks/expression.rweight.ipynb
        doc/notebooks/expression.shortest.ipynb
        doc/notebooks/expression.shuffle.ipynb
        doc/notebooks/expression.split.ipynb
        doc/notebooks/expression.standard.ipynb
        doc/notebooks/expression.star_normal_form.ipynb
        doc/notebooks/expression.thompson.ipynb
        doc/notebooks/expression.transpose.ipynb
        doc/notebooks/expression.transposition.ipynb
        doc/notebooks/expression.tuple.ipynb
        doc/notebooks/expression.zpc.ipynb
        doc/notebooks/Expressions.ipynb
        doc/notebooks/Glossary.ipynb
        doc/notebooks/Hacking.ipynb
        doc/notebooks/ICTAC-2016.ipynb
        doc/notebooks/ICTAC-2017.ipynb
        doc/notebooks/label.ldivide.ipynb
        doc/notebooks/label.multiply.ipynb
        doc/notebooks/label.Operators.ipynb
        doc/notebooks/label.rdivide.ipynb
        doc/notebooks/local.mk
        doc/notebooks/polynomial.add.ipynb
        doc/notebooks/polynomial.conjunction.ipynb
        doc/notebooks/polynomial.cotrie.ipynb
        doc/notebooks/polynomial.ldivide.ipynb
        doc/notebooks/polynomial.lweight.ipynb
        doc/notebooks/polynomial.multiply.ipynb
        doc/notebooks/polynomial.Operators.ipynb
        doc/notebooks/polynomial.rweight.ipynb
        doc/notebooks/polynomial.split.ipynb
        doc/notebooks/polynomial.trie.ipynb
        doc/notebooks/polynomial.tuple.ipynb
        doc/notebooks/References.ipynb
        doc/notebooks/SACS-2017.ipynb
        doc/notebooks/Sms2fr.ipynb
        doc/notebooks/Spell-checker.ipynb
        doc/notebooks/Stackoverflow.ipynb
        doc/notebooks/Tools.ipynb
        doc/notebooks/Transducers.ipynb
        doc/notebooks/Trouble-Shooting.ipynb
        doc/notebooks/weight.add.ipynb
        doc/notebooks/weight.ldivide.ipynb
        doc/notebooks/weight.multiply.ipynb
        doc/notebooks/weight.Operators.ipynb
        doc/notebooks/weight.rdivide.ipynb
        doc/local.mk
        doc/vcsn.dox.in
        lib/ctx/libctx.cc
        lib/vcsn/algos/daut.cc
        lib/vcsn/algos/edit-automaton.cc
        lib/vcsn/algos/efsm.cc
        lib/vcsn/algos/fado.cc
        lib/vcsn/algos/fwd.hh
        lib/vcsn/algos/others.cc
        lib/vcsn/algos/print.cc
        lib/vcsn/algos/read.cc
        lib/vcsn/algos/registry.hh
        lib/vcsn/dot/driver.cc
        lib/vcsn/dot/driver.hh
        lib/vcsn/dot/fwd.hh
        lib/vcsn/dot/parse.cc
        lib/vcsn/dot/parse.hh
        lib/vcsn/dot/scan-version.hh
        lib/vcsn/dot/scan.cc
        lib/vcsn/dot/scan.hh
        lib/vcsn/dot/stack.hh
        lib/vcsn/dyn/context-parser.cc
        lib/vcsn/dyn/context-parser.hh
        lib/vcsn/dyn/context-printer.cc
        lib/vcsn/dyn/context-printer.hh
        lib/vcsn/dyn/context-visitor.hh
        lib/vcsn/dyn/fwd.hh
        lib/vcsn/dyn/signature-printer.cc
        lib/vcsn/dyn/signature-printer.hh
        lib/vcsn/dyn/translate.cc
        lib/vcsn/dyn/translate.hh
        lib/vcsn/dyn/type-ast.hh
        lib/vcsn/misc/configuration.cc
        lib/vcsn/misc/direction.cc
        lib/vcsn/misc/escape.cc
        lib/vcsn/misc/file-library.cc
        lib/vcsn/misc/flex-lexer.hh
        lib/vcsn/misc/format.cc
        lib/vcsn/misc/indent.cc
        lib/vcsn/misc/random.cc
        lib/vcsn/misc/signature.cc
        lib/vcsn/misc/stream.cc
        lib/vcsn/misc/xltdl.cc
        lib/vcsn/misc/xltdl.hh
        lib/vcsn/rat/caret.cc
        lib/vcsn/rat/caret.hh
        lib/vcsn/rat/driver.cc
        lib/vcsn/rat/driver.hh
        lib/vcsn/rat/fwd.hh
        lib/vcsn/rat/identities.cc
        lib/vcsn/rat/parse.cc
        lib/vcsn/rat/parse.hh
        lib/vcsn/rat/read.cc
        lib/vcsn/rat/read.hh
        lib/vcsn/rat/scan-version.hh
        lib/vcsn/rat/scan.cc
        lib/vcsn/rat/scan.hh
        lib/vcsn/rat/stack.hh
        lib/local.mk
        libexec/local.mk
        libexec/vcsn-compile
        libexec/vcsn-gdb
        libexec/vcsn-notebook
        libexec/vcsn-ps
        libexec/vcsn-score
        libexec/vcsn-score-compare
        libexec/vcsn-tools-algos.cc
        libexec/vcsn-tools.cc
        libexec/vcsn-tools.hh
        python/vcsn/demo/__init__.py
        python/vcsn/demo/automaton.py
        python/vcsn/demo/eliminate_state.py
        python/vcsn/__init__.py
        python/vcsn/automaton.py
        python/vcsn/context.py
        python/vcsn/d3Widget.py
        python/vcsn/dot.py
        python/vcsn/expansion.py
        python/vcsn/expression.py
        python/vcsn/ipython.py
        python/vcsn/label.py
        python/vcsn/polynomial.py
        python/vcsn/proxy.py
        python/vcsn/python3.py
        python/vcsn/score.py
        python/vcsn/tools.py
        python/vcsn/weight.py
        python/vcsn_tools/__init__.py
        python/vcsn_tools/demangle.py
        python/vcsn_tools/gdb-demangle.py
        python/local.mk
        python/pylintrc
        python/vcsn_cxx.cc
        share/vcsn/figs/vcsn.mini.png
        share/vcsn/figs/vcsn.png
        share/vcsn/js/AutomatonD3Widget.js
        share/vcsn/jupyter_profile/custom/custom.css
        share/vcsn/jupyter_profile/custom/custom.js
        share/vcsn/jupyter_profile/custom/logo.png
        share/vcsn/jupyter_profile/migrated
        share/vcsn/lal_char_b/a1.gv
        share/vcsn/lal_char_b/b1.gv
        share/vcsn/lal_char_b/evena.gv
        share/vcsn/lal_char_b/oddb.gv
        share/vcsn/lal_char_z/b1.gv
        share/vcsn/lal_char_z/binary.gv
        share/vcsn/lal_char_z/c1.gv
        share/vcsn/lal_char_z/d1.gv
        share/vcsn/lal_char_zmin/minab.gv
        share/vcsn/lal_char_zmin/minblocka.gv
        share/vcsn/lal_char_zmin/slowgrow.gv
        share/vcsn/notebook_profile/static/custom/custom.css
        share/vcsn/notebook_profile/static/custom/custom.js
        share/vcsn/notebook_profile/static/custom/logo.png
        share/vcsn/sms2fr/graphemic.efsm
        share/vcsn/sms2fr/syntactic.efsm
        share/vcsn/config.in.yaml
        share/vcsn/local.mk
        share/vcsn/version.yaml
        share/local.mk
        tests/bin/checker
        tests/bin/ipynbdoctest.py
        tests/bin/rat.py
        tests/bin/test.py
        tests/bin/vcsn.in
        tests/demo/compose.cc
        tests/demo/generator.cpp
        tests/demo/generator1.0.cpp
        tests/demo/generator1.1.cpp
        tests/demo/generator1.2.cpp
        tests/demo/generator_rec_stop.cpp
        tests/demo/operators.cc
        tests/demo/prod-eval.cc
        tests/demo/sms2fr-dyn.cc
        tests/demo/sms2fr-static.cc
        tests/demo/test.cpp
        tests/demo/test2.cpp
        tests/python/add.dir/a1+b1.gv
        tests/python/add.dir/a1.gv
        tests/python/add.dir/ab+bc.gv
        tests/python/add.dir/b1.gv
        tests/python/add.dir/join.gv
        tests/python/automaton.dir/a.grail
        tests/python/automaton.dir/a.gv
        tests/python/automaton.dir/del-1.fado
        tests/python/automaton.dir/del-1.gv
        tests/python/automaton.dir/derived-term.tex
        tests/python/automaton.dir/dfa.fado
        tests/python/automaton.dir/dfa.gv
        tests/python/automaton.dir/drinks-simple.gv
        tests/python/automaton.dir/enfa.fado
        tests/python/automaton.dir/enfa.gv
        tests/python/automaton.dir/html.gv
        tests/python/automaton.dir/lal_char_b.daut
        tests/python/automaton.dir/lal_char_b.in.gv
        tests/python/automaton.dir/lal_char_b.out.gv
        tests/python/automaton.dir/lal_char_b.tex
        tests/python/automaton.dir/lal_char_b.tex.gv
        tests/python/automaton.dir/lal_char_q.daut
        tests/python/automaton.dir/lal_char_q.in.gv
        tests/python/automaton.dir/lal_char_q.out.gv
        tests/python/automaton.dir/lal_char_q.tex
        tests/python/automaton.dir/lal_char_q.tex.gv
        tests/python/automaton.dir/lan_char_z.daut
        tests/python/automaton.dir/lan_char_z.in.gv
        tests/python/automaton.dir/lan_char_z.out.gv
        tests/python/automaton.dir/lan_char_z.tex
        tests/python/automaton.dir/lan_char_z.tex.gv
        tests/python/automaton.dir/lan_x_lan_q.daut
        tests/python/automaton.dir/lan_x_lan_q.in.gv
        tests/python/automaton.dir/lan_x_lan_q.out.gv
        tests/python/automaton.dir/lan_x_lan_q.tex
        tests/python/automaton.dir/lan_x_lan_q.tex.gv
        tests/python/automaton.dir/lao_z.daut
        tests/python/automaton.dir/lao_z.in.gv
        tests/python/automaton.dir/lao_z.out.gv
        tests/python/automaton.dir/lao_z.tex
        tests/python/automaton.dir/lao_z.tex.gv
        tests/python/automaton.dir/lat.fado
        tests/python/automaton.dir/lat.gv
        tests/python/automaton.dir/lat_lan.fado
        tests/python/automaton.dir/lat_lan.gv
        tests/python/automaton.dir/lazy.out.gv
        tests/python/automaton.dir/lazy.tex
        tests/python/automaton.dir/nfa.fado
        tests/python/automaton.dir/nfa.gv
        tests/python/automaton.dir/pyramid.daut
        tests/python/automaton.dir/pyramid.in.gv
        tests/python/automaton.dir/pyramid.out.gv
        tests/python/automaton.dir/pyramid.tex
        tests/python/automaton.dir/pyramid.tex.gv
        tests/python/automaton.dir/thin.fado
        tests/python/automaton.dir/thin.gv
        tests/python/compose.dir/left.gv
        tests/python/compose.dir/result.gv
        tests/python/compose.dir/right.gv
        tests/python/conjugate.dir/ab-ac-conjug.gv
        tests/python/conjugate.dir/abc-conjug.gv
        tests/python/conjunction.dir/a.gv
        tests/python/conjunction.dir/ab.gv
        tests/python/conjunction.dir/abc.gv
        tests/python/conjunction.dir/ax.gv
        tests/python/conjunction.dir/x.gv
        tests/python/conjunction.dir/xa.gv
        tests/python/conjunction.dir/xy.gv
        tests/python/conjunction.dir/xyz.gv
        tests/python/derivation.dir/ax-by.gv
        tests/python/derivation.dir/e1-dt.gv
        tests/python/derivation.dir/e2-dt-breaking.gv
        tests/python/derivation.dir/e2-dt.gv
        tests/python/derivation.dir/ext-prod-breaking.gv
        tests/python/derivation.dir/h3-dt-breaking.gv
        tests/python/derivation.dir/h3-dt.gv
        tests/python/determinize.dir/b-det.gv
        tests/python/determinize.dir/b.gv
        tests/python/determinize.dir/de-bruijn-3-det.gv
        tests/python/determinize.dir/de-bruijn-8-det.gv
        tests/python/determinize.dir/deterministic-det.gv
        tests/python/determinize.dir/deterministic.gv
        tests/python/determinize.dir/empty-det.gv
        tests/python/determinize.dir/empty.gv
        tests/python/determinize.dir/epsilon-det.gv
        tests/python/determinize.dir/epsilon.gv
        tests/python/determinize.dir/f2-det.gv
        tests/python/determinize.dir/f2.gv
        tests/python/determinize.dir/ladybird-4-det.gv
        tests/python/determinize.dir/ladybird-8-det.gv
        tests/python/determinize.dir/q-det.gv
        tests/python/determinize.dir/q.gv
        tests/python/determinize.dir/z-det.gv
        tests/python/determinize.dir/z.gv
        tests/python/determinize.dir/zmin-det.gv
        tests/python/determinize.dir/zmin.gv
        tests/python/divide.dir/ldiv.gv
        tests/python/divide.dir/rdiv.gv
        tests/python/efsm.dir/a1.efsm
        tests/python/efsm.dir/a2x.efsm
        tests/python/efsm.dir/a2xyz.efsm
        tests/python/efsm.dir/abs.efsm
        tests/python/efsm.dir/ascii-to-one.efsm
        tests/python/efsm.dir/ascii-to-one.gv
        tests/python/efsm.dir/bad_final_weight.efsm
        tests/python/efsm.dir/bad_weight.efsm
        tests/python/efsm.dir/char-string.efsm
        tests/python/efsm.dir/lal-char-log.gv
        tests/python/efsm.dir/lal-char-zmin.efsm
        tests/python/efsm.dir/lal-char-zmin.gv
        tests/python/efsm.dir/lat-zmin.efsm
        tests/python/efsm.dir/lat-zmin.gv
        tests/python/efsm.dir/one.efsm
        tests/python/efsm.dir/slowgrow.efsm
        tests/python/efsm.dir/str.efsm
        tests/python/eliminate-state.dir/abc-elim-0.gv
        tests/python/eliminate-state.dir/abc-elim-1.gv
        tests/python/eliminate-state.dir/abc-elim-2.gv
        tests/python/eliminate-state.dir/abc-elim-3.gv
        tests/python/eliminate-state.dir/lao-elim-0.gv
        tests/python/eliminate-state.dir/lao-elim-1.gv
        tests/python/eliminate-state.dir/lao-elim-2.gv
        tests/python/eliminate-state.dir/lao.gv
        tests/python/expression.dir/de-bruijn-associative-logical.gv
        tests/python/expression.dir/de-bruijn-associative-physical.gv
        tests/python/expression.dir/de-bruijn-trivial-logical.gv
        tests/python/expression.dir/de-bruijn-trivial-physical.gv
        tests/python/expression.dir/labels-none-logical.gv
        tests/python/expression.dir/labels-none-physical.gv
        tests/python/expression.dir/lan-lan-associative-logical.gv
        tests/python/expression.dir/lan-lan-associative-physical.gv
        tests/python/expression.dir/lan-lan-trivial-logical.gv
        tests/python/expression.dir/lan-lan-trivial-physical.gv
        tests/python/factory.dir/cerny-6.gv
        tests/python/factory.dir/clique-a-4.gv
        tests/python/factory.dir/de-bruijn-2.gv
        tests/python/factory.dir/de-bruijn-3.gv
        tests/python/factory.dir/double-ring-1-0.gv
        tests/python/factory.dir/double-ring-4-2-3.gv
        tests/python/factory.dir/ladybird-2-zmin.gv
        tests/python/factory.dir/ladybird-2.gv
        tests/python/factory.dir/levenshtein.gv
        tests/python/factory.dir/u-5.gv
        tests/python/minimize.dir/incomplete-non-trim.gv
        tests/python/minimize.dir/incomplete-non-trim.moore.gv
        tests/python/minimize.dir/intricate.exp.gv
        tests/python/minimize.dir/no-final-states.gv
        tests/python/minimize.dir/no-final-states.moore.gv
        tests/python/minimize.dir/no-initial-states.exp.gv
        tests/python/minimize.dir/no-initial-states.gv
        tests/python/minimize.dir/no-initial-states.moore.gv
        tests/python/minimize.dir/nonlal.exp.gv
        tests/python/minimize.dir/redundant.exp.gv
        tests/python/minimize.dir/redundant.gv
        tests/python/minimize.dir/small-nfa.exp.gv
        tests/python/minimize.dir/small-z.exp.gv
        tests/python/minimize.dir/small-z.gv
        tests/python/partial-identity.dir/lal,q.gv
        tests/python/power.dir/binary^0.gv
        tests/python/power.dir/binary^1.gv
        tests/python/prefix.dir/aut1-factor.gv
        tests/python/prefix.dir/aut1-prefix.gv
        tests/python/prefix.dir/aut1-subword.gv
        tests/python/prefix.dir/aut1-suffix.gv
        tests/python/prefix.dir/aut1.gv
        tests/python/prefix.dir/aut2-factor.gv
        tests/python/prefix.dir/aut2-prefix.gv
        tests/python/prefix.dir/aut2-subword.gv
        tests/python/prefix.dir/aut2-suffix.gv
        tests/python/prefix.dir/aut2.gv
        tests/python/prefix.dir/aut3-factor.gv
        tests/python/prefix.dir/aut3-prefix.gv
        tests/python/prefix.dir/aut3-subword.gv
        tests/python/prefix.dir/aut3-suffix.gv
        tests/python/prefix.dir/aut3.gv
        tests/python/prefix.dir/aut4-factor.gv
        tests/python/prefix.dir/aut4-prefix.gv
        tests/python/prefix.dir/aut4-subword.gv
        tests/python/prefix.dir/aut4-suffix.gv
        tests/python/prefix.dir/aut4.gv
        tests/python/proper.dir/astar-backward.gv
        tests/python/proper.dir/astar-forward.gv
        tests/python/proper.dir/lan-b.in.gv
        tests/python/proper.dir/lan-b.out.gv
        tests/python/proper.dir/lan-log.in.daut
        tests/python/proper.dir/lan-log.out.daut
        tests/python/proper.dir/lan-poly.1.in.gv
        tests/python/proper.dir/lan-poly.1.out.gv
        tests/python/proper.dir/lan-poly.2.fail.gv
        tests/python/proper.dir/lan-poly.3.fail.gv
        tests/python/proper.dir/lan-qr.in.gv
        tests/python/proper.dir/lan-qr.out.gv
        tests/python/proper.dir/lan-r.in.gv
        tests/python/proper.dir/lan-r.out.gv
        tests/python/proper.dir/lan-z.fail.gv
        tests/python/proper.dir/lan-z.in.gv
        tests/python/proper.dir/lan-z.out.gv
        tests/python/proper.dir/lao-r.in.gv
        tests/python/proper.dir/lao-r.out.gv
        tests/python/proper.dir/law-b.in.gv
        tests/python/proper.dir/law-b.out.gv
        tests/python/standard.dir/1.in.gv
        tests/python/standard.dir/1.out.gv
        tests/python/standard.dir/2.in.gv
        tests/python/standard.dir/2.out.gv
        tests/python/standard.dir/3.in.gv
        tests/python/standard.dir/3.out.gv
        tests/python/standard.dir/complement-1.gv
        tests/python/standard.dir/compose-1.gv
        tests/python/standard.dir/conjunction-1.gv
        tests/python/standard.dir/conjunction-2.gv
        tests/python/standard.dir/infiltrate-1.gv
        tests/python/standard.dir/ldivide-1.gv
        tests/python/standard.dir/ldivide-2.gv
        tests/python/standard.dir/ldivide-3.gv
        tests/python/standard.dir/rdivide-1.gv
        tests/python/standard.dir/shuffle-1.gv
        tests/python/standard.dir/transpose-1.gv
        tests/python/standard.dir/transposition-1.gv
        tests/python/standard.dir/transposition-2.gv
        tests/python/standard.dir/transposition-3.gv
        tests/python/standard.dir/transposition-4.gv
        tests/python/standard.dir/transposition-5.gv
        tests/python/standard.dir/tuple-1.gv
        tests/python/standard.dir/tuple-2.gv
        tests/python/standard.dir/tuple-3.gv
        tests/python/synchronize.dir/bool.gv
        tests/python/synchronize.dir/bool_delay.gv
        tests/python/synchronize.dir/bool_min.gv
        tests/python/synchronize.dir/bool_min_delay.gv
        tests/python/synchronize.dir/z.gv
        tests/python/synchronize.dir/z_delay.gv
        tests/python/synchronize.dir/z_min.gv
        tests/python/synchronize.dir/z_min_delay.gv
        tests/python/to-expression.dir/a.gv
        tests/python/tracebacks.dir/non-verbose.ipy
        tests/python/tracebacks.dir/non-verbose.ipy.out
        tests/python/tracebacks.dir/non-verbose.py.out
        tests/python/tracebacks.dir/verbose.ipy
        tests/python/tracebacks.dir/verbose.ipy.out
        tests/python/tracebacks.dir/verbose.py.out
        tests/python/union.dir/abc.gv
        tests/python/accessible.py
        tests/python/add.py
        tests/python/automaton.py
        tests/python/chain.py
        tests/python/compare.py
        tests/python/complement.py
        tests/python/complete.py
        tests/python/compose.py
        tests/python/conjugate.py
        tests/python/conjunction.py
        tests/python/constant-term.py
        tests/python/context.py
        tests/python/demangle.py
        tests/python/derivation.py
        tests/python/determinize.py
        tests/python/difference.py
        tests/python/divide.py
        tests/python/efsm.py
        tests/python/eliminate-state.py
        tests/python/evaluate.py
        tests/python/expand.py
        tests/python/expansion.py
        tests/python/expression.py
        tests/python/factory.py
        tests/python/filter.py
        tests/python/has-bounded-lag.py
        tests/python/has-lightening-cycle.py
        tests/python/has-twins-property.py
        tests/python/infiltrate.py
        tests/python/info.py
        tests/python/insplit.py
        tests/python/is-ambiguous.py
        tests/python/is-deterministic.py
        tests/python/is-equivalent.py
        tests/python/is-functional.py
        tests/python/is-isomorphic.py
        tests/python/is-partial-identity.py
        tests/python/is-proper.py
        tests/python/is-valid.py
        tests/python/kmul.py
        tests/python/label.py
        tests/python/letterize.py
        tests/python/lift.py
        tests/python/lightest-automaton.py
        tests/python/lightest.py
        tests/python/local.mk
        tests/python/minimize.py
        tests/python/multiply.py
        tests/python/name.py
        tests/python/normalize.py
        tests/python/num-tapes.py
        tests/python/partial-identity.py
        tests/python/polynomial.py
        tests/python/power.py
        tests/python/prefix.py
        tests/python/project.py
        tests/python/proper.py
        tests/python/properlazy.py
        tests/python/push-weights.py
        tests/python/reduce.py
        tests/python/scc.py
        tests/python/shortest.py
        tests/python/shuffle.py
        tests/python/sort.py
        tests/python/split.py
        tests/python/standard.py
        tests/python/star-height.py
        tests/python/star-normal-form.py
        tests/python/star.py
        tests/python/synchronize.py
        tests/python/synchronizing-word.py
        tests/python/thompson.py
        tests/python/to-expansion.py
        tests/python/to-expression.py
        tests/python/tracebacks.py
        tests/python/transducer.py
        tests/python/transpose.py
        tests/python/trie.py
        tests/python/tuples.py
        tests/python/union.py
        tests/python/universal.py
        tests/python/weight-series.py
        tests/python/weight.py
        tests/python/zpc.py
        tests/rat/b.rat
        tests/rat/common-weights.rat
        tests/rat/common.rat
        tests/rat/local.mk
        tests/rat/q.rat
        tests/rat/qr.rat
        tests/rat/qrr.rat
        tests/rat/tuple.rat
        tests/rat/utf-8.rat
        tests/rat/xfail1.rat
        tests/rat/xfail2.rat
        tests/rat/xfail3.rat
        tests/tools/evaluate.chk
        tests/tools/help.chk
        tests/tools/local.mk
        tests/unit/aut_lal_char_z.cc
        tests/unit/aut_lao_z.cc
        tests/unit/aut_law_char_z.cc
        tests/unit/concat.cc
        tests/unit/cross.cc
        tests/unit/distance.cc
        tests/unit/dyn.cc
        tests/unit/label.cc
        tests/unit/polynomialset.cc
        tests/unit/proper.cc
        tests/unit/test.hh
        tests/unit/transpose.cc
        tests/unit/weight.cc
        tests/unit/weight.hh
        tests/unit/zip-maps.cc
        tests/unit/zip.cc
        tests/local.mk
        vcsn/algos/detail/printer.hh
        vcsn/algos/a-star.hh
        vcsn/algos/accessible.hh
        vcsn/algos/add.hh
        vcsn/algos/are-equivalent.hh
        vcsn/algos/are-isomorphic.hh
        vcsn/algos/bellman-ford.hh
        vcsn/algos/cerny.hh
        vcsn/algos/compare-automaton.hh
        vcsn/algos/compare.hh
        vcsn/algos/complement.hh
        vcsn/algos/complete.hh
        vcsn/algos/compose-expression.hh
        vcsn/algos/compose.hh
        vcsn/algos/conjugate.hh
        vcsn/algos/conjunction-expression.hh
        vcsn/algos/conjunction.hh
        vcsn/algos/constant-term.hh
        vcsn/algos/constant.hh
        vcsn/algos/copy.hh
        vcsn/algos/daut.hh
        vcsn/algos/de-bruijn.hh
        vcsn/algos/derivation.hh
        vcsn/algos/derived-term.hh
        vcsn/algos/determinize-expansion.hh
        vcsn/algos/determinize.hh
        vcsn/algos/dijkstra-node.hh
        vcsn/algos/dijkstra.hh
        vcsn/algos/distance.hh
        vcsn/algos/divide.hh
        vcsn/algos/divkbaseb.hh
        vcsn/algos/dot.hh
        vcsn/algos/double-ring.hh
        vcsn/algos/edit-automaton.hh
        vcsn/algos/efsm.hh
        vcsn/algos/eppstein.hh
        vcsn/algos/epsilon-remover-distance.hh
        vcsn/algos/epsilon-remover-lazy.hh
        vcsn/algos/epsilon-remover-separate.hh
        vcsn/algos/epsilon-remover.hh
        vcsn/algos/evaluate.hh
        vcsn/algos/expand.hh
        vcsn/algos/filter.hh
        vcsn/algos/focus.hh
        vcsn/algos/fwd.hh
        vcsn/algos/grail.hh
        vcsn/algos/guess-automaton-format.hh
        vcsn/algos/has-bounded-lag.hh
        vcsn/algos/has-lightening-cycle.hh
        vcsn/algos/has-twins-property.hh
        vcsn/algos/identities-of.hh
        vcsn/algos/implicit-path.hh
        vcsn/algos/inductive.hh
        vcsn/algos/infiltrate-expression.hh
        vcsn/algos/info.hh
        vcsn/algos/insplit.hh
        vcsn/algos/is-acyclic.hh
        vcsn/algos/is-ambiguous.hh
        vcsn/algos/is-complete.hh
        vcsn/algos/is-deterministic.hh
        vcsn/algos/is-free-boolean.hh
        vcsn/algos/is-functional.hh
        vcsn/algos/is-partial-identity.hh
        vcsn/algos/is-proper.hh
        vcsn/algos/is-synchronized.hh
        vcsn/algos/is-valid-expression.hh
        vcsn/algos/is-valid.hh
        vcsn/algos/k-lightest-path.hh
        vcsn/algos/ladybird.hh
        vcsn/algos/letterize.hh
        vcsn/algos/levenshtein.hh
        vcsn/algos/lift.hh
        vcsn/algos/lightest-automaton.hh
        vcsn/algos/lightest-path.hh
        vcsn/algos/lightest.hh
        vcsn/algos/make-context.hh
        vcsn/algos/minimize-brzozowski.hh
        vcsn/algos/minimize-hopcroft.hh
        vcsn/algos/minimize-moore.hh
        vcsn/algos/minimize-signature.hh
        vcsn/algos/minimize-weighted.hh
        vcsn/algos/minimize.hh
        vcsn/algos/multiply.hh
        vcsn/algos/name.hh
        vcsn/algos/normalize-expansion.hh
        vcsn/algos/normalize.hh
        vcsn/algos/num-tapes.hh
        vcsn/algos/pair.hh
        vcsn/algos/partial-identity-expression.hh
        vcsn/algos/partial-identity.hh
        vcsn/algos/path.hh
        vcsn/algos/prefix.hh
        vcsn/algos/print.hh
        vcsn/algos/project-automaton.hh
        vcsn/algos/project.hh
        vcsn/algos/proper.hh
        vcsn/algos/push-weights.hh
        vcsn/algos/quotient.hh
        vcsn/algos/quotkbaseb.hh
        vcsn/algos/random-automaton.hh
        vcsn/algos/random-expression.hh
        vcsn/algos/random-weight.hh
        vcsn/algos/read-automaton.hh
        vcsn/algos/read.hh
        vcsn/algos/reduce.hh
        vcsn/algos/scc.hh
        vcsn/algos/shortest-path-tree.hh
        vcsn/algos/shortest.hh
        vcsn/algos/shuffle-expression.hh
        vcsn/algos/sort.hh
        vcsn/algos/split.hh
        vcsn/algos/standard.hh
        vcsn/algos/star-height.hh
        vcsn/algos/star-normal-form.hh
        vcsn/algos/star.hh
        vcsn/algos/strip.hh
        vcsn/algos/synchronize.hh
        vcsn/algos/synchronizing-word.hh
        vcsn/algos/tags.hh
        vcsn/algos/thompson.hh
        vcsn/algos/tikz.hh
        vcsn/algos/to-expansion.hh
        vcsn/algos/to-expression-expansion.hh
        vcsn/algos/to-expression.hh
        vcsn/algos/to-spontaneous.hh
        vcsn/algos/transpose.hh
        vcsn/algos/trie.hh
        vcsn/algos/tuple-automaton.hh
        vcsn/algos/tuple.hh
        vcsn/algos/u.hh
        vcsn/algos/universal.hh
        vcsn/algos/weight-series.hh
        vcsn/algos/weight.hh
        vcsn/algos/zpc.hh
        vcsn/alphabets/char.hh
        vcsn/alphabets/setalpha.hh
        vcsn/alphabets/string.hh
        vcsn/concepts/automaton.hh
        vcsn/core/rat/compare.hh
        vcsn/core/rat/copy.hh
        vcsn/core/rat/dot.hh
        vcsn/core/rat/expansionset.hh
        vcsn/core/rat/expression.hh
        vcsn/core/rat/expression.hxx
        vcsn/core/rat/expressionset.hh
        vcsn/core/rat/expressionset.hxx
        vcsn/core/rat/fwd.hh
        vcsn/core/rat/hash.hh
        vcsn/core/rat/identities.hh
        vcsn/core/rat/info.hh
        vcsn/core/rat/printer.hh
        vcsn/core/rat/printer.hxx
        vcsn/core/rat/project.hh
        vcsn/core/rat/size.hh
        vcsn/core/rat/transpose.hh
        vcsn/core/rat/visitor.hh
        vcsn/core/rat/visitor.hxx
        vcsn/core/automaton-decorator.hh
        vcsn/core/automaton.hh
        vcsn/core/automatonset.hh
        vcsn/core/expression-automaton.hh
        vcsn/core/fwd.hh
        vcsn/core/join-automata.hh
        vcsn/core/join.hh
        vcsn/core/kind.hh
        vcsn/core/lazy-tuple-automaton.hh
        vcsn/core/mutable-automaton.hh
        vcsn/core/name-automaton.hh
        vcsn/core/partition-automaton.hh
        vcsn/core/permutation-automaton.hh
        vcsn/core/polystate-automaton.hh
        vcsn/core/state-bimap.hh
        vcsn/core/transition-map.hh
        vcsn/core/transition.hh
        vcsn/core/tuple-automaton.hh
        vcsn/ctx/context.hh
        vcsn/ctx/fwd.hh
        vcsn/ctx/instantiate.hh
        vcsn/ctx/lal_char.hh
        vcsn/ctx/lal_char_b.hh
        vcsn/ctx/lal_char_br.hh
        vcsn/ctx/lal_char_q.hh
        vcsn/ctx/lal_char_r.hh
        vcsn/ctx/lal_char_z.hh
        vcsn/ctx/lal_char_zr.hh
        vcsn/ctx/lal_char_zrr.hh
        vcsn/ctx/lan_char.hh
        vcsn/ctx/lan_char_b.hh
        vcsn/ctx/lan_char_r.hh
        vcsn/ctx/lan_char_z.hh
        vcsn/ctx/lan_char_zr.hh
        vcsn/ctx/lao_br.hh
        vcsn/ctx/lao_z.hh
        vcsn/ctx/law_char.hh
        vcsn/ctx/law_char_b.hh
        vcsn/ctx/law_char_br.hh
        vcsn/ctx/law_char_q.hh
        vcsn/ctx/law_char_r.hh
        vcsn/ctx/law_char_z.hh
        vcsn/ctx/law_char_zr.hh
        vcsn/ctx/law_char_zrr.hh
        vcsn/ctx/project-context.hh
        vcsn/ctx/traits.hh
        vcsn/dyn/algos.hh
        vcsn/dyn/algos.hxx
        vcsn/dyn/automaton.hh
        vcsn/dyn/cast.hh
        vcsn/dyn/context.hh
        vcsn/dyn/fwd.hh
        vcsn/dyn/name.hh
        vcsn/dyn/types.hh
        vcsn/dyn/value.hh
        vcsn/labelset/fwd.hh
        vcsn/labelset/genset-labelset.hh
        vcsn/labelset/labelset.hh
        vcsn/labelset/letterset.hh
        vcsn/labelset/nullableset.hh
        vcsn/labelset/oneset.hh
        vcsn/labelset/stateset.hh
        vcsn/labelset/tupleset.hh
        vcsn/labelset/word-polynomialset.hh
        vcsn/labelset/wordset.hh
        vcsn/misc/algorithm.hh
        vcsn/misc/attributes.hh
        vcsn/misc/bimap.hh
        vcsn/misc/builtins.hh
        vcsn/misc/cast.hh
        vcsn/misc/configuration.hh
        vcsn/misc/crange.hh
        vcsn/misc/cross.hh
        vcsn/misc/debug-level.hh
        vcsn/misc/deque.hh
        vcsn/misc/direction.hh
        vcsn/misc/dynamic_bitset.hh
        vcsn/misc/empty.hh
        vcsn/misc/epsilon-profile.hh
        vcsn/misc/escape.hh
        vcsn/misc/export.hh
        vcsn/misc/fibonacci_heap.hh
        vcsn/misc/file-library.hh
        vcsn/misc/file-library.hxx
        vcsn/misc/filter.hh
        vcsn/misc/format.hh
        vcsn/misc/functional.hh
        vcsn/misc/fwd.hh
        vcsn/misc/getargs.hh
        vcsn/misc/indent.hh
        vcsn/misc/index.hh
        vcsn/misc/initializer_list.hh
        vcsn/misc/iostream.hh
        vcsn/misc/irange.hh
        vcsn/misc/location.hh
        vcsn/misc/map.hh
        vcsn/misc/math.hh
        vcsn/misc/memory.hh
        vcsn/misc/military-order.hh
        vcsn/misc/pair.hh
        vcsn/misc/position.hh
        vcsn/misc/queue.hh
        vcsn/misc/raise.hh
        vcsn/misc/random.hh
        vcsn/misc/regex.hh
        vcsn/misc/set.hh
        vcsn/misc/set.hxx
        vcsn/misc/show.hh
        vcsn/misc/signature.hh
        vcsn/misc/sparse-map.hh
        vcsn/misc/sparse-set.hh
        vcsn/misc/star-status.hh
        vcsn/misc/static-if.hh
        vcsn/misc/stream.hh
        vcsn/misc/symbol.hh
        vcsn/misc/to-string.hh
        vcsn/misc/to.hh
        vcsn/misc/tuple.hh
        vcsn/misc/type_traits.hh
        vcsn/misc/unordered_map.hh
        vcsn/misc/unordered_set.hh
        vcsn/misc/vector.hh
        vcsn/misc/wet.hh
        vcsn/misc/xalloc.hh
        vcsn/misc/xalloc.hxx
        vcsn/misc/zip-maps.hh
        vcsn/misc/zip.hh
        vcsn/weightset/b.hh
        vcsn/weightset/f2.hh
        vcsn/weightset/fwd.hh
        vcsn/weightset/log.hh
        vcsn/weightset/min-plus.hh
        vcsn/weightset/nmin.hh
        vcsn/weightset/polynomialset.hh
        vcsn/weightset/q.hh
        vcsn/weightset/qmp.hh
        vcsn/weightset/r.hh
        vcsn/weightset/rmin.hh
        vcsn/weightset/weightset.hh
        vcsn/weightset/z.hh
        vcsn/weightset/zmin.hh
        vcsn/config.in.h
        vcsn/fwd.hh
        vcsn/local.mk
        aclocal.m4
        configure
        configure.ac
        COPYING.txt
        Makefile
        Makefile.am
        NEWS.md
        README.md
        TODO.txt)
